@@ -2,12 +2,12 @@
 .\"     Title: fwknopd
 .\"    Author: [see the "AUTHORS" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 05/04/2014
+.\"      Date: 05/08/2014
 .\"    Manual: Fwknop Server
 .\"    Source: Fwknop Server
 .\"  Language: English
 .\"
-.TH "FWKNOPD" "8" "05/04/2014" "Fwknop Server" "Fwknop Server"
+.TH "FWKNOPD" "8" "05/08/2014" "Fwknop Server" "Fwknop Server"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -230,6 +230,15 @@ processes that may or not be running\&. If there is an existing fwknopd process 
 \fB\-\-syslog\-enable\fR
 .RS 4
 Allow messages to be sent to syslog even if the foreground mode is set\&.
+.RE
+.PP
+\fB\-t, \-\-test\fR
+.RS 4
+Run
+\fBfwknopd\fR
+in test mode\&. This instructs
+\fBfwknopd\fR
+to acquire and process SPA packets, but not manipulate firewall rules or execute commands that are provided by SPA clients\&. This option is mostly useful for the fuzzing tests in the test suite to ensure broad code coverage under adverse conditions\&.
 .RE
 .PP
 \fB\-v, \-\-verbose\fR
