@@ -2,6 +2,11 @@ fwknop-2.6.3 (05//2014):
     - [server] Bug fix to handle SPA packets over HTTP by making sure to honor
       the ENABLE_SPA_OVER_HTTP fwknopd.conf variable and to properly account
       for SPA packet lengths when delivered via HTTP.
+    - [server] Add --test mode to instruct fwknopd to acquire and process
+      SPA packets, but not manipulate firewall rules or execute commands that
+      are provided by SPA clients. This option is mostly useful for the fuzzing
+      tests in the test suite to ensure broad code coverage under adverse
+      conditions.
 
 fwknop-2.6.2 (04/28/2014):
     - [libfko] fix double free bug in SPA parser discovered with the new
